Do not trigger signature replacement twice

Both, the signature controller and the ComposerView::identityChanged
slot will update the signature if the identity has been changed.
To prevent this disable identity tracking in signature controller (via suspend())
and let Message::ComposerViewBase::identityChanged handle the signature update.

BUG: 261016